--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@icons/*": ["src/assets/icons/*"],
       "@images/*": ["src/assets/images/*"],
       "@layout/*":["src/layout/*"],
+      "@pages": ["src/pages/index"],
       "@pages/*":["src/pages/*"],
       "@styles/*": ["src/styles/*"]
     },
