--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.70.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
@@ -17,18 +18,25 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.54.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "globals": "^16.0.0",
+    "jiti": "^2.4.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.28.0",
     "vite": "^5.0.0"
-  }
+  },
+  "packageManager": "yarn@4.8.0"
 }
