--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "globals": "^16.0.0",
+    "html-react-parser": "^5.2.2",
     "jiti": "^2.4.2",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.28.0",
     "vite": "^5.0.0"
   },
-  "packageManager": "yarn@4.8.0"
+  "packageManager": "yarn@1.22.19"
 }
