--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@layout/*":["src/layout/*"],
       "@pages": ["src/pages/index"],
       "@pages/*":["src/pages/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@utils/*": ["src/utils/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
